[gd_scene load_steps=5 format=3 uid="uid://desaosxwdpa0c"]

[ext_resource type="Script" path="res://scenes/ui/wave_ui/wave_ui.gd" id="1_kh2tq"]
[ext_resource type="Texture2D" uid="uid://cg0pbixx5j25f" path="res://resources/sprite/UI/wave_bar/wave_icon.png" id="2_ly27v"]
[ext_resource type="PackedScene" uid="uid://d0xuj2fyubr35" path="res://scenes/ui/sound_button/sound_button.tscn" id="3_ib6um"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mycjd"]
bg_color = Color(0.901961, 0.564706, 0.305882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="WaveUi" type="CanvasLayer"]
script = ExtResource("1_kh2tq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1000.0
offset_top = 3.0
offset_right = 1153.0
offset_bottom = 46.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WaveCounterLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave 1 / 10"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ly27v")
stretch_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SendWaveButton" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("3_ib6um")]
unique_name_in_owner = true
layout_mode = 2
text = "Send Wave"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveTimerBar" type="ProgressBar" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 8)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_mycjd")
max_value = 1.0
step = 0.001
value = 1.0
show_percentage = false

[node name="WaveTimer" type="Timer" parent="Control/VBoxContainer"]
unique_name_in_owner = true
one_shot = true
